overflow fixed

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 body{
     background-color: black;
